--- a/util/kvdb-rocksdb/Cargo.toml
+++ b/util/kvdb-rocksdb/Cargo.toml
@@ -11,7 +11,7 @@ log = "0.3"
 parking_lot = "0.4"
 regex = "0.2"
 rlp = { path = "../rlp" }
-rocksdb = { git = "https://github.com/paritytech/rust-rocksdb" }
+rocksdb = { git = "https://github.com/paritytech/rust-rocksdb", branch = "link-snappy" }
 interleaved-ordered = "0.1.0"
 
 [dev-dependencies]
