--- a/util/snappy/Cargo.toml
+++ b/util/snappy/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Parity Technologies <admin@parity.io>"]
 
 [dependencies]
 libc = "0.2.7"
-rocksdb = { git = "https://github.com/paritytech/rust-rocksdb" }
+rocksdb = { git = "https://github.com/paritytech/rust-rocksdb", branch = "link-snappy" }
